# opengauss-oGRAC

./: BUILD.bazel  CMakeLists.txt  NOTICE.md  global_options.bzl
pkg/: CMakeLists.txt
pkg/admin/dialect_b_scripts/: create_cluster_database.lun.sql  create_cluster_database.sample.sql  create_database.sample.sql  create_dbstor_cluster_database.lun.sql  create_dbstor_cluster_database.sample.sql  create_dbstor_database.sample.sql  initdb_customized.sql  initview_customized.sql
pkg/admin/dialect_c_scripts/: create_cluster_database.lun.sql  create_cluster_database.sample.sql  create_database.sample.sql  create_dbstor_cluster_database.lun.sql  create_dbstor_cluster_database.sample.sql  create_dbstor_database.sample.sql  initdb_customized.sql  initview_customized.sql
pkg/admin/scripts/: create_3rd_pkg.sql  initview.sql  multi_master_test.sh
pkg/deploy/action/: appctl.sh  config.py  config_params.json  config_params_file.json  config_params_lun.json  install.sh  log_config.py  ograc_deploy.py  om_log.py  om_log_config.py  pre_install.py  utils.py  versions.yml
pkg/deploy/action/cms/: appctl.sh  cms_config.json  cms_container_init.py  cms_ctl.py  cms_daemon.py  cms_deploy.py  cms_reg.sh  cms_startup.py  config.py  log_config.py  utils.py
pkg/deploy/action/compat/: get_config_info.py  update_config.py
pkg/deploy/action/docker/: config.py  container_upgrade.py  dbstor_tool_opt_common.py  delete_unready_pod.py  dr_deploy.py  dr_deploy_wrapper.py  get_config_info.py  log_backup.py  mount.py  ograc_initer.py  ograc_numa.py  pod_record.py  readiness_probe.py  resolve_pwd.py  update_policy_params.py  upgrade_commit.py  upgrade_systable.py  upgrade_version_check.py  white_list.txt
pkg/deploy/action/dss/: appctl.sh  config.py  dss_config.json  dss_contrl.sh  dss_ctl.py  dss_deploy.py  log_config.py
pkg/deploy/action/implement/: certificate_update_and_revocation.py  check_deploy_param.py  check_nfs4_mandatory_lock_switch.py  check_pwd.py  config.py  config_opt.py  get_source_version.py  update_ograc_passwd.py  upgrade_version_check.py
pkg/deploy/action/inspection/: config.py  declear_env.py  generate_html_results.py  inspection_config.json  inspection_ograc.py  inspection_task.py  log_tool.py
pkg/deploy/action/logic/: common_func.py  config.py  storage_operate.py
pkg/deploy/action/logicrep/: appctl.sh  config.py  log_config.py  logicrep_config.json  logicrep_ctl.py  logicrep_deploy.py  utils.py
pkg/deploy/action/og_om/: appctl.sh  config.py  log_config.py  og_om_config.json  og_om_ctl.py  og_om_deploy.py  rollback.sh  utils.py
pkg/deploy/action/ograc/: appctl.sh  config.py  installdb.sh  log_config.py  ograc_config.json  ograc_ctl.py  ograc_deploy.py  ograc_install.py  utils.py
pkg/deploy/action/ograc_common/: config.py  cpu_bind.py  crypte_adapter.py  exec_sql.py  get_config_info.py  kmc_adapter.py  obtains_lsid.py
pkg/deploy/action/ograc_exporter/: appctl.sh  config.py  log_config.py  ograc_exporter_config.json  ograc_exporter_ctl.py  ograc_exporter_deploy.py  utils.py
pkg/deploy/action/storage_deploy/: appctl.sh  backup.sh  change_log_priority.sh  check_point.sh  check_pwd.py  check_status.sh  clear_history_version.py  clear_upgrade_backup.py  config_params.json  config_params_file.json  config_params_lun.json  deploy_policy_config.json  do_snapshot.py  env.sh  fetch_cls_stat.py  file_mod.sh  find_next_page.py  get_config_info.py  get_source_version.py  init_container.sh  log4sh.sh  modify_env.py  obtains_lsid.py  om_log.py  om_log_config.py  pre_install.py  pre_upgrade.py  pre_upgrade.sh  rest_client.py  rollback.sh  running_status_check.sh  start.sh  stop.sh  uninstall.sh  update_config.py  upgrade.sh  upgrade_backup.sh  upgrade_commit.sh  upgrade_status_query.sh  upgrade_version_check.py  (+1 more)
pkg/deploy/action/storage_operate/: config.py  create_file_system.py  do_snapshot.py  dr_k8s_switch.py  dr_operate_interface.py  dr_undeploy.py  k8s_dr_config.json  migrate_file_system.py  split_dbstore_fs.py
pkg/deploy/action/upgrade/: clear_upgrade_backup.py  fetch_cls_stat.py  ograc_upgrade.py  pre_upgrade.py  white_list.txt
pkg/deploy/action/utils/: config.py
pkg/deploy/action/wsr/: config.py  gen_report.py  gen_report.sh  report.cnf
pkg/deploy/action/wsr_report/: gen_report.sh
pkg/install/: install.py
pkg/install/script/cluster/: cluster.sh
pkg/src/cluster/: BUILD.bazel  dtc_buffer.c  dtc_dcs.c  dtc_dcs.h  dtc_dls.c  dtc_drc.c  dtc_drc.h  dtc_recovery.c
pkg/src/cms/cbb/: cbb_test_log.c
pkg/src/cms/cms/: cms_stat.c  cms_stat.h  cms_vote.c  cms_work.c
pkg/src/common/: cm_date.c  cm_date.h  cm_dec8.c  cm_dec8.h  cm_decimal.h  cm_defs.h  cm_device.c  cm_device.h  cm_disk.c  cm_dss_iofence.c  cm_hint_word.h  cm_interval.h  cm_key_word.h  cm_lex.h  cm_nls.c  cm_nls.h  cm_partkey.h  cm_text.c  cm_text.h  cm_word.c  cm_word.h
pkg/src/common/variant/: var_cast.c  var_cast.h  var_cast_dialect_a.c  var_cast_dialect_b.c  var_cast_dialect_c.c  var_cmp.c  var_typmode.c  var_typmode.h
pkg/src/driver/ogodbc/: connection.c  convert.c  environment.h  execute.c  execute.h  init_exec.c  init_exec.h  odbcapi.c  statement.c
pkg/src/fdsa/: BUILD.bazel
pkg/src/kernel/: BUILD.bazel  knl_database.c  knl_database.h  knl_db_create.c  knl_db_ctrl.c  knl_extern_table_defs.h  knl_interface.c
pkg/src/kernel/buffer/: knl_buffer.c  knl_buffer.h  knl_buffer_log.c
pkg/src/kernel/catalog/: dc_tbl.c  knl_ctlg.c  knl_ctlg.h  knl_dc.c
pkg/src/kernel/common/: knl_compress.c  knl_syncpoint.c  knl_syncpoint.h
pkg/src/kernel/include/: db_defs.h  dml_defs.h  index_defs.h  (+3 more)
pkg/src/mec/: BUILD.bazel  mes_func.c
pkg/src/ogsql/: CMakeLists.txt  ogsql_context.h  ogsql_service.h  ogsql_slowsql.c  ogsql_statistics.c  ogsql_statistics.h  ogsql_stmt.c  ogsql_stmt.h
pkg/src/rc/: BUILD.bazel  rc_reform.c
pkg/src/server/: BUILD.bazel  srv_device_adpt.c  srv_session.c  srv_session.h  srv_view.c  srv_view.h  srv_view_dtc_local.c  srv_view_sga.c
pkg/src/upgrade_check/: knl_db_ctrl_persistent.h
pkg/test/: ora-dialect.sql
pkg/test/og_regress/: og_schedule_part1  ogdb_regress_ograc.sh
(+528 files in other folders)
